@@ -1,42 +1,45 @@
 package solver;
 
 import java.awt.Point;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Random;
+import java.util.Queue;
+import java.util.Set;
 
 public class BreadthFirstSearch extends AbstractSolver {
 	
-	private final Random randomiser = new Random();
 
 	@Override
 	public List<Point> solve(int[][] maze, Point start, Point goal) {
-		LinkedList<Point> path = new LinkedList<Point>();
-		List<Point> nextPoints = new LinkedList<Point>();
+		Queue<List<Point>> agenda = new LinkedList<>();
+		List<Point> startPath = new ArrayList<Point>();
+        startPath.add(start);
+        agenda.add(startPath);
+		Set<Point> pointsVisited = new HashSet<>();
+	
 		
-		boolean found = false;
-		
-		path.add(start);
-		
-		while(!found) {
-			Point current = path.getLast();
-			if(current.equals(goal)) {
-				return path;
+		while(!agenda.isEmpty()) {
+			List<Point> existingPath = agenda.poll();
+			Point existingPoint = existingPath.get(existingPath.size()-1);
+			if(existingPoint.equals(goal)) {
+				return existingPath;
 			}
-			nextPoints.clear();
-			for(Point neighbour : getNeighbours(current, maze)) {
-				if(!path.contains(neighbour)) {
-					nextPoints.add(neighbour);
+			pointsVisited.add(existingPath.get(existingPath.size()-1)); 
+			for (Point neighbour: getNeighbours(existingPoint,maze)) {
+				if(!pointsVisited.contains(neighbour)) {
+					List<Point> newPath = new ArrayList<>();
+					newPath.addAll(existingPath);
+					newPath.add(neighbour);
+					agenda.add(newPath);
 				}
+				
+				
 			}
-			if(nextPoints.isEmpty()) {
-				path.clear();
-				path.add(start);
-			}
-			else {
-				Point next = nextPoints.get(randomiser.nextInt(nextPoints.size()));
-				path.add(next);
-			}
+			
+				
+			
 		}
 		return null;
 	}
